j'ai ajouter une modification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1></h1>
 <p>This is the first file in my new Git Repo.</p>
+<p> bonjour waleter tu n'a pas hake mon ocode tu la juste consulter</p>
 
 </body>
 </html>
