Walter a vu la modif de Mounard

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ mon premier tp branch
 <h2> une nouvelle modif de walter </h2>
 Bonjour Mouna, j'ai haché ton code :)
 
-J'ai vu ta modif Mouna
+J'ai vu ta modif Mouna. C'est cool.
 </div>
 
 </body>
